Fixed glitches during traverse animation on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ html {
 	-webkit-text-size-adjust: none;
 	-moz-text-size-adjust: none;
 	-ms-text-size-adjust: none;
-	overflow-x: hidden;
+	overflow: hidden;
 	background: var(--background);
 	/* leave background here for smooth opacity transition */
 }
